--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,14 @@ nav li:hover{
     flex-wrap: wrap;
     height: auto;
 }
+#contact li a{
+    color: black;
+    transition: 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19) all;
+}
+#contact li a:hover{
+    color:white;
+   transform: scale(1.5);
+}
 .justify-evenly{
     justify-content:space-evenly;
 }
